2014-09-02  Per Bothner  <per@bothner.com>

	* lang/SyntaxPattern.java: Add support for underscore meaning
	"match and ignore anything".
	* lang/SyntaxRules.java (<init>): Don't set literal_identifiers[0] -
	there is no need and it confuses things.

	Add R7RS functionality for ellipsis in syntax-rules.
	* standard/syntax_rules.java (rewriteForm): Check for alternative
	symbol to use in place of '... .
	* lang/SyntaxPattern.java (<init>, translate): Take ellipsis argument.
	(literalIdentifierEq): Handle SyntaxForm as a convenience.
	* lang/SyntaxRules.java (<init>): Take ellipsis argument.
	* lang/SyntaxTemplate.java (dots3): Remove field.
	(<init>, convert_template): Take ellipsis argument.
	(convert_template): Generalize to user-specified ellipsis symbol.
	Generalize handling of (... ...) to handle the r7rs extension (... XXX).
	* lang/SyntaxRule.java: Update accordingly.
	* standard/syntax.java: Update accordingly.

2014-08-31  Per Bothner  <per@bothner.com>

	* lang/SyntaxPattern.java: Use StringBuilder instead of StringBuffer.
	* lang/SyntaxRules.java: Likewise.
	* lang/SyntaxTemplate.java: Likewise.

	* lang/SyntaxForms.java (fromDatumIfNeeded): Handle null template.
	* lang/SyntaxPattern.java (getLiteralsList): Simplify and make
	more general by using fromDatumIfNeeded.

2014-08-21  Per Bothner  <per@bothner.com>

	* standard/Scheme.java (initScheme): 'parameterize' moved.

2014-08-13  Andrea Bernardini <andrebask@gmail.com>

       * standard/Scheme.java (initScheme): Add case.

202014-08-14  Per Bothner  <per@bothner.com>

	* standard/Scheme.java (initScheme): Add string-replace!.

2014-08-11  Per Bothner  <per@bothner.com>

	* standard/Scheme.java (initScheme): Add string-append!.

2014-08-04  Per Bothner  <per@bothner.com>

	* standard/Scheme.java (initScheme): Add string-map.

	* standard/Scheme.java (initScheme): Update string-for-each location
	and add srfi-13-string-for-each.

2014-07-22  Per Bothner  <per@bothner.com>
